important styles refactoring

--- a/client_ts/src/components/tasks/activeTask/activeTask.scss
+++ b/client_ts/src/components/tasks/activeTask/activeTask.scss
@@ -1,21 +1,35 @@
-.activeTask {
+.active-task {
   width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
 
-  .activeTask__title {
-    font-size: 16px;
+  .active-task__instance {
+    display: flex;
+    justify-content: space-between;
+    border: 1px #00000030 solid;
+    align-items: center;
+    height: 40px;
+    padding: 0 20px;
 
-    .activeTask__delete-button {
-      width: 120px;
-      height: 50px;
-      font-size: 18px;
+    .active-task__title {
+      font-size: 16px;
+    }
+
+    .active-task__delete-button {
+      padding: 5px;
       display: flex;
       align-items: center;
       justify-content: center;
       border-radius: 2px;
-      background-color: indianred;
+      cursor: pointer;
+
+      p {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 1rem;
+      }
     }
   }
 }
