--- a/client_ts/src/app.css
+++ b/client_ts/src/app.css
@@ -5,7 +5,7 @@ body {
 }
 
 .wrapper {
-    max-width: 920px;
+    max-width: 1110px;
     margin: auto;
 }
 
@@ -19,6 +19,11 @@ a {
 
 * {
     font-family: 'Quantico', sans-serif;
+}
+
+button {
+    outline: none;
+    border: none;
 }
 
 .deleting {
