--- a/client_ts/src/components/modalMessage/modalMessage.scss
+++ b/client_ts/src/components/modalMessage/modalMessage.scss
@@ -1,30 +1,28 @@
 .block {
-    background-color: #fff;
-    padding: 3px;
-    position: fixed;
-    bottom: 20px;
-    margin: auto;
-    left: 0;
-    right: 0;
-    display: flex;
-    width: 50%;
-    font-size: 12px;
-    max-width: 320px;
-    border: 1px solid;
-    border-radius: 5px;
-    justify-content: center;
-    align-items: center;
-    font-family: 'Quantico', sans-serif;
-    height: auto;
-    flex-direction: column;
-    cursor: pointer;
-}
+  padding: 3px;
+  background-color: #fff;
+  position: absolute;
+  bottom: 20px;
+  margin: auto;
+  left: 0;
+  right: 0;
+  display: flex;
+  width: 50%;
+  font-size: 12px;
+  max-width: 320px;
+  border: 1px solid;
+  border-radius: 5px;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  cursor: pointer;
 
-h4 {
+  > h4 {
     margin: 0;
-}
+  }
 
-p {
+  > p {
     font-size: 8px;
     margin: 0;
+  }
 }
