--- a/client_ts/src/components/tasks/addTasks/addTasks.scss
+++ b/client_ts/src/components/tasks/addTasks/addTasks.scss
@@ -6,12 +6,12 @@
   gap: 10px;
   height: calc(100% - 48px);
 
-  p {
+  > p {
     font-size: 18px;
     margin: 0;
   }
 
-  input {
+  > input {
     width: 50%;
     font-size: 14px;
     height: 20px;
