--- a/client_ts/src/app/app.css
+++ b/client_ts/src/app/app.css
@@ -20,3 +20,11 @@ a {
     text-decoration: none;
     color: inherit;
 }
+
+.loading{
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
